# bipelines

./: .gitignore  README.md  example_config.yaml  example_python.py  pyproject.toml
beaker_runner/: __main__.py  config.py  experiment.py  launch.py  runner.py
bipelines/: __main__.py  bipeline.py  config.py  experiment.py  launch.py  local_env.py
