[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bipelines"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "beaker-py>=2.0.1",
    "beaker-gantry",
    "rich",
    "pyyaml",
]

[project.scripts]
bipelines = "bipelines.__main__:main"
bipelines-launch = "bipelines.launch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bipelines*"]

[tool.gantry]
